--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Bootstap -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Css -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <!-- FavIcon -->
-    <link rel="icon" type="img/x-icon" href="/images/icon.png" />
+    <link rel="icon" type="img/x-icon" href="images/icon.png" />
     <title>Angora</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-lg bg-transparent fixed-top py-4">
         <div class="container">
           <a class="navbar-brand" href="#home"
-            ><img src="/images/logo-white.png" class="w-100"
+            ><img src="images/logo-white.png" class="w-100"
           /></a>
           <button
             class="navbar-toggler"
@@ -107,7 +107,7 @@
           <div class="carousel-item active" data-bs-interval="400">
             <div class="content">
               <img
-                src="/images/slideshow-1.jpg"
+                src="images/slideshow-1.jpg"
                 class="d-block w-100 vh-100"
                 alt="..."
               />
@@ -128,7 +128,7 @@
           <div class="carousel-item" data-bs-interval="400">
             <div class="content">
               <img
-                src="/images/slideshow-2.jpg"
+                src="images/slideshow-2.jpg"
                 class="d-block w-100 vh-100"
                 alt="..."
               />
@@ -148,7 +148,7 @@
           <div class="carousel-item" data-bs-interval="400">
             <div class="content">
               <img
-                src="/images/slideshow-3.jpg"
+                src="images/slideshow-3.jpg"
                 class="d-block w-100 vh-100"
                 alt="..."
               />
@@ -462,21 +462,21 @@
   <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="true">
     <div class="carousel-indicators position-static">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
-        <img src="/images/client-1.png" class="img-fluid " alt="">
+        <img src="images/client-1.png" class="img-fluid " alt="">
         <h6>Martin
           Jack</h6>
       </button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2">
-        <img src="/images/client-2.png" class="img-fluid" alt="">
+        <img src="images/client-2.png" class="img-fluid" alt="">
       </button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3">
-        <img src="/images/client-3.png"class="img-fluid" alt="">
+        <img src="images/client-3.png"class="img-fluid" alt="">
       </button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4">
-        <img src="/images/client-4.png"class="img-fluid" alt="">
+        <img src="images/client-4.png"class="img-fluid" alt="">
       </button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5">
-        <img src="/images/client-5.png"class="img-fluid" alt="">
+        <img src="images/client-5.png"class="img-fluid" alt="">
       </button>
     </div>
     <div class="carousel-inner">
